...
        range: 25...1_000
    )

    init() {
        #if DEBUG
        let environment = ProcessInfo.processInfo.environment
        if let url = environment["TT_SERVER_URL"], let key = environment["TT_ACCESS_KEY"] {
            serverURLString = url
            accessKey = key
            saveSettings()
            UserDefaults.standard.set(0, forKey: "selectedTab")
        }
        #endif
...
